# agisdk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENT_DEVELOPMENT_METHODOLOGY.md  AUDIO_TASKS_README.md  FUTURE_IMPROVEMENTS.md  README.md  commit_msg.txt  example_audio_tasks.py  human_eval.py  llm_eval.sh  pyproject.toml  response.json  response1.json  result_leaderboard.py  run_task.py  starter.py  submission.md  test.py  test_enhanced_integration.py
demoagent/: ACTIONS.md  SYSTEM_PROMPT.md  agent.py  agent_logger_class.py  agent_utils.py  browsergym_async.py  browsergym_sync.py  evaluation_utils.py  model_utils.py
docs/: ENHANCED_INTEGRATION_PR.md  TECHNICAL_PR.md  enhanced_integration_guide.md  manual_vs_basic_agent.md
example/: anotherme.py  anthropic_cua.py  browser-use.py  custom.py  enhanced_integration.py  hackable.py  human.py  human_run.py  leaderboard_example.py  manual_agent.py  nova_benchmark.py  openAI_cua.py  run_dashdish_simple.py  run_single.py
scripts/: bench.py
src/agi_agents/: prompts.py
src/agi_agents/qwen/: __init__.py  qwen.py  tools.py
src/agisdk/: __init__.py  tasks.py
src/agisdk.egg-info/: PKG-INFO  SOURCES.txt
src/agisdk/REAL/: __init__.py  harness.py  logging.py
src/agisdk/REAL/browsergym/: __init__.py
src/agisdk/REAL/browsergym/core/: __init__.py  chat.py  env.py  observation.py  registration.py  spaces.py  task.py
src/agisdk/REAL/browsergym/core/action/: base.py  functions.py  highlevel.py  openai_cua.py  parsers.py  python.py  utils.py
src/agisdk/REAL/browsergym/experiments/: agent.py  loop.py
src/agisdk/REAL/browsergym/utils/: __init__.py  obs.py
src/agisdk/REAL/browsergym/webclones/: __init__.py  base.py  base_test.py  evaluate.py  task_config.py  utils.py
src/agisdk/REAL/browsergym/webclones/eval_scripts/: eval_dashdish_1.py
src/agisdk/REAL/browsergym/webclones/tasks/: dashdish-1.json  dashdish-2.json  dashdish-3.json  flyunified-1.json  flyunified-2.json  flyunified-3.json  gocalendar-1 copy.json  gocalendar-1.json  gocalendar-2.json  gocalendar-3.json  gomail-1.json  gomail-2.json  gomail-3.json  networkin-1.json  networkin-2.json  networkin-3.json  networkin1_jmespath_llm.json  omnizon-1.json  omnizon-2.json  omnizon-3.json  opendining-1.json  opendining-2.json  opendining-3.json  staynb-1.json  staynb-2.json  staynb-3.json  topwork-1.json  topwork-2.json  topwork-3.json  udriver-1.json  udriver-2.json  udriver-3.json  zilloft-1.json  zilloft-2.json  zilloft-3.json
src/agisdk/REAL/browsergym/webclones/v2/: upload_v2_tasks.py
src/agisdk/REAL/browsergym/webclones/v2/eval_scripts/: eval_dashdish_1.py  eval_dashdish_10.py  eval_dashdish_11.py  eval_dashdish_12.py  eval_dashdish_17.py  eval_dashdish_24.py  eval_dashdish_26.py  eval_dashdish_3.py  eval_dashdish_4.py  eval_dashdish_7.py  eval_dashdish_8.py  eval_gocalendar_10.py  (+108 more)
src/agisdk/REAL/demo_agent/: __init__.py  basic_agent.py  manual_agent.py  run_human_eval.py
src/arena/: __init__.py  agent.py  errors.py  evaluation.py  image.py  proxy-select.css  proxy-select.js  result.py
(+121 files in other folders)
