[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agisdk"
version = "0.3.5"
authors = [
    {name = "Diego Caples", email = "diego@theagi.company"},
    {name = "Prannay Hebbar", email = "prannay@theagi.company"}
]
description = "AGI SDK - tools for building and evaluating AI web agents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "pillow>=8.0.0",
    "gymnasium>=0.28.0",
    "playwright>=1.20.0",
    "tqdm>=4.62.0",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "requests>=2.25.0",
    "pyparsing>=3.0.0",
    "regex>=2022.0.0",
    "jmespath>=1.0.0",
    "beautifulsoup4>=4.10.0",
    "tiktoken>=0.3.0",
    "anthropic>=0.5.0",
    "ray>=2.8.0",
    "lxml",
    "rich>=10.0.0"
]

[project.urls]
"Homepage" = "https://github.com/agi-inc/agisdk"
"Bug Tracker" = "https://github.com/agi-inc/agisdk/issues"
"Documentation" = "https://github.com/agi-inc/agisdk"
"Leaderboard" = "https://realevals.xyz"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agisdk.REAL.browsergym.webclones" = [
    "v1/tasks/*.json",
    "v2/tasks/*.json",
    "tasks/experimental/*.json"
]
"agisdk.REAL.browsergym.core" = ["chat_files/*.html", "chat_files/img/*.svg", "chat_files/*.png", "javascript/*.js"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501", "E722"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
